# python-project-83

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  build.sh  database.sql  docker-compose.dev.yml  pylama.ini  pyproject.toml
page_analyzer/: __init__.py  app.py  data.py  db.py  dto.py  errors.py  url_repository.py  url_service.py  utils.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/components/: header.html
page_analyzer/templates/errors/: 404.html
page_analyzer/templates/layout/: footer.html  header.html  layout.html  messages.html
page_analyzer/templates/urls/: url_info.html  urls_list.html
